Fixed Distortion more or less

--- a/homestead/src/Footer.css
+++ b/homestead/src/Footer.css
@@ -3,7 +3,7 @@
   text-align: center;
   background-image: url("./images/White+Masthead.png");
   background-position: center;
-  background-size: 100% 100%;
+  background-size: contain;
   background-repeat: no-repeat; 
   height: 200px;
 }
